tests/snapshots/example__init_scaffolds_the_example_with_every_cell_todo.snap
---
source: tests/example.rs
expression: text
---
# Generated by `rlsspec init` from schema public.
# Every identity × table × operation is `todo`: replace each one with the access you intend, e.g.
# `select: deny`, `select: { rows: "published" }` or `update: [{ where: "true", expect: deny }]`.
# `rlsspec cover` shows what is left; `rlsspec test` runs what is specified.
version: 1

database:
  url: ${env:DATABASE_URL}
  schemas: [public]

# setup:                          # SQL files run first as the privileged role, always rolled back
#   - seed.sql                    # (the rows your checks need)

# One identity per role holding a privilege on a table in scope (PUBLIC excluded).
# Left out:
#   role app_auditor: BYPASSRLS, so no policy applies to it
#   role postgres: superuser, so no policy applies to it
identities:
  app_anon:
    role: app_anon
    # TODO: gucs, the session settings your policies read, e.g. gucs: { app.user_id: "…" }
  app_user:
    role: app_user
    # TODO: gucs, the session settings your policies read, e.g. gucs: { app.user_id: "…" }

# Cells without a case are listed as unspecified. Use `fail` in CI once the spec is complete.
unspecified: warn

expect:
  organizations:
    app_anon: { select: todo, insert: todo, update: todo, delete: todo }
    app_user: { select: todo, insert: todo, update: todo, delete: todo }
  memberships:
    app_anon: { select: todo, insert: todo, update: todo, delete: todo }
    app_user: { select: todo, insert: todo, update: todo, delete: todo }
  projects:
    app_anon: { select: todo, insert: todo, update: todo, delete: todo }
    app_user: { select: todo, insert: todo, update: todo, delete: todo }
  tasks:
    app_anon: { select: todo, insert: todo, update: todo, delete: todo }
    app_user: { select: todo, insert: todo, update: todo, delete: todo }
